
use squiredb;

create table Users (
	userID integer not null primary key,
	userName varchar(20)
);
